// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcDateRangeFilter should render if no dates are passed in value prop 1`] = `
<div
  class="ec-filter-popover"
  data-test="ec-date-range-filter__trigger"
>
  <ec-stub
    data-test="ec-stub ec-popover-stub"
    distance="8"
    placement="bottom-start"
    prevent-overflow="false"
  >
    
    <div
      class="ec-filter-popover__trigger"
      data-test="ec-filter-popover__trigger"
    >
      <button
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        title="Due date"
        type="button"
      >
        Due date
      </button>
      <!--v-if-->
      <svg
        class="ec-icon ec-icon--interactive ec-filter-popover__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </div>
    
    
    <div
      class="ec-filter-popover__filter-content"
    >
      
      <div
        class="ec-date-range-filter"
        data-test="ec-date-range-filter"
      >
        <div
          class="ec-date-range-filter__inputs-wrapper"
        >
          <div
            class="ec-input-field ec-date-range-filter__from-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-input-field-1"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                From
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              class="ec-input-field__input"
              data-test="ec-date-range-filter__from-input ec-input-field__input"
              id="ec-input-field-1"
              placeholder="dd/mm/yyyy"
              type="date"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="ec-input-field ec-date-range-filter__to-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-input-field-2"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                To
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              class="ec-input-field__input"
              data-test="ec-date-range-filter__to-input ec-input-field__input"
              id="ec-input-field-2"
              placeholder="dd/mm/yyyy"
              type="date"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
        <!--v-if-->
        <button
          class="ec-date-range-filter__clear-button"
          data-test="ec-date-range-filter__clear-button"
          disabled=""
          type="button"
        >
          Clear dates
        </button>
      </div>
      
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDateRangeFilter should render properly when all the props are given 1`] = `
<div
  class="ec-filter-popover"
  data-test="ec-date-range-filter__trigger"
>
  <ec-stub
    data-test="ec-stub ec-popover-stub"
    distance="8"
    placement="bottom-start"
    prevent-overflow="false"
  >
    
    <div
      class="ec-filter-popover__trigger"
      data-test="ec-filter-popover__trigger"
    >
      <button
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        title="Due date"
        type="button"
      >
        Due date
      </button>
      <span
        class="ec-badge ec-badge--info tw-ml-4"
        data-test="ec-badge"
      >
        
        2
        
      </span>
      <svg
        class="ec-icon ec-icon--interactive ec-filter-popover__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </div>
    
    
    <div
      class="ec-filter-popover__filter-content"
    >
      
      <div
        class="ec-date-range-filter"
        data-test="ec-date-range-filter"
      >
        <div
          class="ec-date-range-filter__inputs-wrapper"
        >
          <div
            class="ec-input-field ec-date-range-filter__from-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-input-field-1"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                From
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              class="ec-input-field__input"
              data-test="ec-date-range-filter__from-input ec-input-field__input"
              id="ec-input-field-1"
              max="2020-04-10"
              placeholder="dd/mm/yyyy"
              type="date"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="ec-input-field ec-date-range-filter__to-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-input-field-2"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                To
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              class="ec-input-field__input"
              data-test="ec-date-range-filter__to-input ec-input-field__input"
              id="ec-input-field-2"
              min="2020-03-14"
              placeholder="dd/mm/yyyy"
              type="date"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
        <!--v-if-->
        <button
          class="ec-date-range-filter__clear-button"
          data-test="ec-date-range-filter__clear-button"
          type="button"
        >
          Clear dates
        </button>
      </div>
      
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDateRangeFilter should render properly with an error message when the dateRangeErrorMessage is given 1`] = `
<div
  class="ec-filter-popover"
  data-test="ec-date-range-filter__trigger"
>
  <ec-stub
    data-test="ec-stub ec-popover-stub"
    distance="8"
    placement="bottom-start"
    prevent-overflow="false"
  >
    
    <div
      class="ec-filter-popover__trigger"
      data-test="ec-filter-popover__trigger"
    >
      <button
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        title="Due date"
        type="button"
      >
        Due date
      </button>
      <span
        class="ec-badge ec-badge--info tw-ml-4"
        data-test="ec-badge"
      >
        
        2
        
      </span>
      <svg
        class="ec-icon ec-icon--interactive ec-filter-popover__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </div>
    
    
    <div
      class="ec-filter-popover__filter-content"
    >
      
      <div
        class="ec-date-range-filter"
        data-test="ec-date-range-filter"
      >
        <div
          class="ec-date-range-filter__inputs-wrapper"
        >
          <div
            class="ec-input-field ec-date-range-filter__from-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-input-field-1"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                From
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              class="ec-input-field__input"
              data-test="ec-date-range-filter__from-input ec-input-field__input"
              id="ec-input-field-1"
              max="2020-04-10"
              placeholder="dd/mm/yyyy"
              type="date"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="ec-input-field ec-date-range-filter__to-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-input-field-2"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                To
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              class="ec-input-field__input"
              data-test="ec-date-range-filter__to-input ec-input-field__input"
              id="ec-input-field-2"
              min="2020-03-14"
              placeholder="dd/mm/yyyy"
              type="date"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
        <p
          class="ec-date-range-filter__error-text"
          data-test="ec-date-range-filter__error-text"
        >
          This is the date range error message
        </p>
        <button
          class="ec-date-range-filter__clear-button"
          data-test="ec-date-range-filter__clear-button"
          type="button"
        >
          Clear dates
        </button>
      </div>
      
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDateRangeFilter should render properly with an error message when the fromErrorMessage is given 1`] = `
<div
  class="ec-filter-popover"
  data-test="ec-date-range-filter__trigger"
>
  <ec-stub
    data-test="ec-stub ec-popover-stub"
    distance="8"
    placement="bottom-start"
    prevent-overflow="false"
  >
    
    <div
      class="ec-filter-popover__trigger"
      data-test="ec-filter-popover__trigger"
    >
      <button
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        title="Due date"
        type="button"
      >
        Due date
      </button>
      <span
        class="ec-badge ec-badge--info tw-ml-4"
        data-test="ec-badge"
      >
        
        2
        
      </span>
      <svg
        class="ec-icon ec-icon--interactive ec-filter-popover__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </div>
    
    
    <div
      class="ec-filter-popover__filter-content"
    >
      
      <div
        class="ec-date-range-filter"
        data-test="ec-date-range-filter"
      >
        <div
          class="ec-date-range-filter__inputs-wrapper"
        >
          <div
            class="ec-input-field ec-date-range-filter__from-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-input-field-1"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                From
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              aria-describedby="ec-input-field-error-1"
              class="ec-input-field__input ec-input-field__input--has-error"
              data-test="ec-date-range-filter__from-input ec-input-field__input"
              id="ec-input-field-1"
              max="2020-04-10"
              placeholder="dd/mm/yyyy"
              type="date"
            />
            <!--v-if-->
            <!--v-if-->
            <div
              class="ec-input-field__error-text"
              data-test="ec-input-field__error-text"
              id="ec-input-field-error-1"
            >
              This is the from field error message
            </div>
          </div>
          <div
            class="ec-input-field ec-date-range-filter__to-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-input-field-2"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                To
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              class="ec-input-field__input"
              data-test="ec-date-range-filter__to-input ec-input-field__input"
              id="ec-input-field-2"
              min="2020-03-14"
              placeholder="dd/mm/yyyy"
              type="date"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
        <!--v-if-->
        <button
          class="ec-date-range-filter__clear-button"
          data-test="ec-date-range-filter__clear-button"
          type="button"
        >
          Clear dates
        </button>
      </div>
      
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDateRangeFilter should render properly with an error message when the toErrorMessage is given 1`] = `
<div
  class="ec-filter-popover"
  data-test="ec-date-range-filter__trigger"
>
  <ec-stub
    data-test="ec-stub ec-popover-stub"
    distance="8"
    placement="bottom-start"
    prevent-overflow="false"
  >
    
    <div
      class="ec-filter-popover__trigger"
      data-test="ec-filter-popover__trigger"
    >
      <button
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        title="Due date"
        type="button"
      >
        Due date
      </button>
      <span
        class="ec-badge ec-badge--info tw-ml-4"
        data-test="ec-badge"
      >
        
        2
        
      </span>
      <svg
        class="ec-icon ec-icon--interactive ec-filter-popover__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </div>
    
    
    <div
      class="ec-filter-popover__filter-content"
    >
      
      <div
        class="ec-date-range-filter"
        data-test="ec-date-range-filter"
      >
        <div
          class="ec-date-range-filter__inputs-wrapper"
        >
          <div
            class="ec-input-field ec-date-range-filter__from-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-input-field-1"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                From
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              class="ec-input-field__input"
              data-test="ec-date-range-filter__from-input ec-input-field__input"
              id="ec-input-field-1"
              max="2020-04-10"
              placeholder="dd/mm/yyyy"
              type="date"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="ec-input-field ec-date-range-filter__to-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-input-field-2"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                To
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              aria-describedby="ec-input-field-error-2"
              class="ec-input-field__input ec-input-field__input--has-error"
              data-test="ec-date-range-filter__to-input ec-input-field__input"
              id="ec-input-field-2"
              min="2020-03-14"
              placeholder="dd/mm/yyyy"
              type="date"
            />
            <!--v-if-->
            <!--v-if-->
            <div
              class="ec-input-field__error-text"
              data-test="ec-input-field__error-text"
              id="ec-input-field-error-2"
            >
              This is the to field error message
            </div>
          </div>
        </div>
        <!--v-if-->
        <button
          class="ec-date-range-filter__clear-button"
          data-test="ec-date-range-filter__clear-button"
          type="button"
        >
          Clear dates
        </button>
      </div>
      
    </div>
    
  </ec-stub>
</div>
`;
